[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://dica.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Fadeout"
tracks/0/type = "bezier"
tracks/0/path = NodePath("AnimationPlayer/Dica:custom_colors/font_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("AnimationPlayer/Dica:custom_colors/font_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("AnimationPlayer/Dica:custom_colors/font_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("AnimationPlayer/Dica:custom_colors/font_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1025.0
margin_bottom = 602.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer"]
anims/Fadeout = SubResource( 1 )

[node name="Dica" type="Label" parent="CenterContainer/AnimationPlayer"]
margin_left = 512.0
margin_top = 291.0
margin_right = 512.0
margin_bottom = 310.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="animation_finished" from="CenterContainer/AnimationPlayer" to="." method="on_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="on_timeout"]
